--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,6 @@
 // global
 @import './global/reset';
 @import './global/variables';
-
 // mixins
 @import './mixins/forsize';
 @import './mixins/button';
@@ -10,27 +9,26 @@
 @import './components/heropanel';
 @import './components/features';
 @import './components/how-it-works';
-
-
+@import './components/care';
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 16px;
-  width: 100%;
+    font-size: 16px;
+    width: 100%;
 }
 
 body {
-  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-  line-height: 1.5;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    line-height: 1.5;
 }
 
 .row {
-  margin: 0;
+    margin: 0;
 }
 
 .container {
-  position: relative;
-  z-index: 2;
+    position: relative;
+    z-index: 2;
 }
